# unitree-lidar

./: .gitignore  AGENTS.md  LICENSE  README-LIDAR.md  README.md  SETUP.md  continuous_map_simple.py  lidar-motor-lib.sh  lidar-quiet.sh  lidar-wake.sh  live-ethernet.sh  live-usb.sh  live_view.py  make_rosbag.py  measure.py  merge_scans_simple.py  merge_three_known_poses.py  process_scan.py  record_serial_sequence_direct.py  remove-temp-sudo.sh  render_cloud.py  render_o3d.py  render_pcd.py  requirements.txt  rerun-view.sh  rerun_view.py  scan_serial_direct.py  segment.py  setup-temp-sudo.sh  slam_map.py  start-usb.sh  start.sh  stop.sh  switch-to-ethernet.sh  switch-to-serial-wifi.sh  switch-to-serial.sh  switch_to_serial.py  view.sh  view_pcd.py
ETHERNET/: README.md  set_serial_mode_then_power_cycle.sh  start_lidar.sh  stop_lidar.sh  test_start_stop_10s.sh  unitree_lidar_udp_cmd.py
SERIAL/: README.md  start_lidar_usb.sh  stop_lidar_usb.sh  test_usb_start_stop_10s.sh  unitree_lidar_usb_standby.py
glim_config/: config.json  config_global_mapping_cpu.json  config_ros.json  config_sensors.json
glim_config_ref/: config_ros.json
measurements/: 01_co_jsme_udelali.md  02_co_pouzivame.md  03_problem_serial_cteni.md  04_spojovani_vice_skenu.md  05_rozsireni_handheld_mapping.md  README.md  kvalitativní-rekonstrukce.md  merge_01.md  merge_02_pos3.md  merge_03_3poses.md  scan_01.md  scan_02.md  scan_03.md
measurements/continuous_movement/: 01_plan_a_pravidla.md  02_nahravani_sekvence.md  03_slozeni_mapy.md  04_live_preview.md  05_mereni_20260604_230117.md  README.md  build_map.sh  build_map_simple.sh  check_components.sh  live_preview.sh  record_sequence.sh
measurements/continuous_movement/results/: README.md
measurements/continuous_movement/scans/: README.md
measurements/real-time/: README.md
scans/: README.md
sdk-overlay/: CMakeLists.txt
sdk-overlay/examples/: dump_cloud.cpp  lidar_motor.cpp  read_serial.cpp  read_udp.cpp  record_glim.cpp  record_seq.cpp  scan_cloud.cpp  set_to_serial_mode.cpp  set_to_udp_mode.cpp  stream_cloud.cpp
